# story-mixer

./: .dockerignore  .env.production.example  .gitignore  .mcp.json  CLAUDE.md  Caddyfile  LICENSE  Makefile  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  pytest.ini  run_debug.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260315_0001_create_stories_table.py  20260315_0002_add_public_title_to_stories.py  20260319_0001_add_users_table.py  20260319_0002_add_generation_requests_table.py  20260319_0003_google_oauth_users.py
backend/app/: __init__.py  config.py  logging_context.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  auth.py  stories.py
backend/app/domain/: __init__.py  auth.py  genre_options.py  long_form_contracts.py  story_contracts.py  vibe_models.py
backend/app/persistence/: __init__.py  db.py  models.py
backend/app/services/: __init__.py  auth_rate_limit_service.py  auth_service.py  contracts.py  critic_agent.py  long_form_orchestrator.py  model_factory.py  outline_agent.py  provider_gateway.py  rate_limit_service.py
backend/tests/: conftest.py  test_auth_domain.py  test_auth_integration.py  test_auth_service.py  test_chapter_prompt.py  test_config_auth_settings.py  test_deps_import.py  test_logging_context.py  test_long_form_log_events.py  test_orm_models.py  test_outline_agent_prompt.py  test_provider_gateway_prompt_logging.py  test_rate_limit_service.py  test_real_provider_smoke.py  test_story_stream_errors.py  test_vibe_negative_instructions.py
(+73 files in other folders)
