[project]
name = "loreforge-backend"
version = "0.1.0"
description = "LoreForge FastAPI backend for calibrated story generation"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15.0",
  "anthropic>=0.49.0",
  "google-genai>=1.8.0",
  "fastapi>=0.116.0",
  "langchain-anthropic>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-ollama>=0.3.0",
  "langchain-openai>=0.3.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "psycopg[binary]>=3.2.0",
  "pytest>=8.3.0",
  "sqlalchemy>=2.0.40",
  "asyncpg>=0.30.0",
  "uvicorn>=0.35.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM"]
ignore = [
  "B008",   # FastAPI Depends() in function defaults is intentional
]
